; ModuleID = '/home/carl/AnghaBench/nanomsg/src/aio/extr_fsm.c_nn_fsm_init_root.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/aio/extr_fsm.c_nn_fsm_init_root.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_fsm = type { i32, i32, %struct.nn_ctx*, i32*, i32*, i32, i8*, i8* }
%struct.nn_ctx = type { i32 }

@NN_FSM_STATE_IDLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_fsm_init_root(%struct.nn_fsm* %0, i8* %1, i8* %2, %struct.nn_ctx* %3) #0 {
  %5 = alloca %struct.nn_fsm*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.nn_ctx*, align 8
  store %struct.nn_fsm* %0, %struct.nn_fsm** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store %struct.nn_ctx* %3, %struct.nn_ctx** %8, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = load %struct.nn_fsm*, %struct.nn_fsm** %5, align 8
  %11 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %10, i32 0, i32 7
  store i8* %9, i8** %11, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load %struct.nn_fsm*, %struct.nn_fsm** %5, align 8
  %14 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %13, i32 0, i32 6
  store i8* %12, i8** %14, align 8
  %15 = load i32, i32* @NN_FSM_STATE_IDLE, align 4
  %16 = load %struct.nn_fsm*, %struct.nn_fsm** %5, align 8
  %17 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %16, i32 0, i32 5
  store i32 %15, i32* %17, align 8
  %18 = load %struct.nn_fsm*, %struct.nn_fsm** %5, align 8
  %19 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %18, i32 0, i32 0
  store i32 -1, i32* %19, align 8
  %20 = load %struct.nn_fsm*, %struct.nn_fsm** %5, align 8
  %21 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %20, i32 0, i32 4
  store i32* null, i32** %21, align 8
  %22 = load %struct.nn_fsm*, %struct.nn_fsm** %5, align 8
  %23 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %22, i32 0, i32 3
  store i32* null, i32** %23, align 8
  %24 = load %struct.nn_ctx*, %struct.nn_ctx** %8, align 8
  %25 = load %struct.nn_fsm*, %struct.nn_fsm** %5, align 8
  %26 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %25, i32 0, i32 2
  store %struct.nn_ctx* %24, %struct.nn_ctx** %26, align 8
  %27 = load %struct.nn_fsm*, %struct.nn_fsm** %5, align 8
  %28 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %27, i32 0, i32 1
  %29 = call i32 @nn_fsm_event_init(i32* %28)
  ret void
}

declare dso_local i32 @nn_fsm_event_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
